# auto_install

./: Cargo.toml  README.md
examples/: auto_ch_IP_http.rs  auto_ch_IP_https.rs  copy_for_26.rs  get_pc_anki_ver.rs  get_set_server_ca_key.rs  kill_nginx.rs  resend_CA_desktop.rs
preclude/: Cargo.toml
preclude/src/: lib.rs
src/: Anki_exe.rs  Anki_ip.rs  check_pc_anki_ver.rs  check_python.rs  main.rs  print_colors.rs  walk_dir.rs
