[package]
name = "auto_install"
version = "0.1.0"
authors = ["Admin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1"
walkdir = "2.3.1"

[patch.crates-io]
# local module file/dir

[[example]]
name="kill_nginx"